fix style scrollbar sidebar

--- a/tailwind.css
+++ b/tailwind.css
@@ -1,4 +1,4 @@
-/*! tailwindcss v2.2.15 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v2.2.16 | MIT License | https://tailwindcss.com */
 
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 
@@ -633,12 +633,12 @@ video {
   position: relative;
 }
 
-.top-0 {
-  top: 0px;
+.-left-72 {
+  left: -18rem;
 }
 
-.right-0 {
-  right: 0px;
+.\!left-0 {
+  left: 0px !important;
 }
 
 .right-20 {
@@ -649,72 +649,8 @@ video {
   bottom: 0px;
 }
 
-.left-0 {
-  left: 0px;
-}
-
-.-left-72 {
-  left: -18rem;
-}
-
-.\!left-0 {
-  left: 0px !important;
-}
-
-.right-4 {
-  right: 1rem;
-}
-
-.left-4 {
-  left: 1rem;
-}
-
-.left-72 {
-  left: 18rem;
-}
-
-.top-4 {
-  top: 1rem;
-}
-
-.top-5 {
-  top: 1.25rem;
-}
-
-.top-6 {
-  top: 1.5rem;
-}
-
-.top-7 {
-  top: 1.75rem;
-}
-
-.top-16 {
-  top: 4rem;
-}
-
-.top-8 {
-  top: 2rem;
-}
-
-.left-8 {
-  left: 2rem;
-}
-
-.left-\[284px\] {
-  left: 284px;
-}
-
-.-left-1 {
-  left: -0.25rem;
-}
-
-.\!left-\[284px\] {
-  left: 284px !important;
-}
-
-.-left-0 {
-  left: 0px;
+.top-9 {
+  top: 2.25rem;
 }
 
 .-left-2\.5 {
@@ -729,16 +665,12 @@ video {
   left: 276px !important;
 }
 
-.top-9 {
-  top: 2.25rem;
+.top-0 {
+  top: 0px;
 }
 
-.z-10 {
-  z-index: 10;
-}
-
-.z-50 {
-  z-index: 50;
+.left-0 {
+  left: 0px;
 }
 
 .z-20 {
@@ -747,6 +679,10 @@ video {
 
 .z-0 {
   z-index: 0;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .mx-auto {
@@ -788,6 +724,10 @@ video {
   margin-right: 0.25rem;
 }
 
+.\!ml-0 {
+  margin-left: 0px !important;
+}
+
 .mt-14 {
   margin-top: 3.5rem;
 }
@@ -806,10 +746,6 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
-}
-
-.\!ml-0 {
-  margin-left: 0px !important;
 }
 
 .block {
@@ -832,16 +768,12 @@ video {
   display: grid;
 }
 
-.hidden {
-  display: none;
+.h-full {
+  height: 100%;
 }
 
 .h-screen {
   height: 100vh;
-}
-
-.h-full {
-  height: 100%;
 }
 
 .h-52 {
@@ -868,6 +800,10 @@ video {
   height: 20rem;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .w-72 {
   width: 18rem;
 }
@@ -878,10 +814,6 @@ video {
 
 .w-3 {
   width: 0.75rem;
-}
-
-.w-full {
-  width: 100%;
 }
 
 .w-\[90\%\] {
@@ -912,19 +844,9 @@ video {
   max-width: 1440px !important;
 }
 
-.rotate-90 {
-  --tw-rotate: 90deg;
-  transform: var(--tw-transform);
-}
-
 .-rotate-90 {
   --tw-rotate: -90deg;
   transform: var(--tw-transform);
-}
-
-.\!rotate-90 {
-  --tw-rotate: 90deg !important;
-  transform: var(--tw-transform) !important;
 }
 
 .rotate-180 {
@@ -963,35 +885,16 @@ video {
 
 @-webkit-keyframes bounce {
   0%, 100% {
-    transform: translateY(-25%);
-    -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
-            animation-timing-function: cubic-bezier(0.8,0,1,1);
+    transform: translateY(-25%) !important;
+    -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1) !important;
+            animation-timing-function: cubic-bezier(0.8,0,1,1) !important;
   }
 
   50% {
-    transform: none;
-    -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
-            animation-timing-function: cubic-bezier(0,0,0.2,1);
+    transform: none !important;
+    -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1) !important;
+            animation-timing-function: cubic-bezier(0,0,0.2,1) !important;
   }
-}
-
-@keyframes bounce {
-  0%, 100% {
-    transform: translateY(-25%);
-    -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
-            animation-timing-function: cubic-bezier(0.8,0,1,1);
-  }
-
-  50% {
-    transform: none;
-    -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
-            animation-timing-function: cubic-bezier(0,0,0.2,1);
-  }
-}
-
-.animate-bounce {
-  -webkit-animation: bounce 1s infinite;
-          animation: bounce 1s infinite;
 }
 
 @keyframes bounce {
@@ -1057,31 +960,12 @@ video {
   overflow: hidden;
 }
 
-.overflow-x-visible {
-  overflow-x: visible;
-}
-
 .overflow-y-scroll {
   overflow-y: scroll;
 }
 
 .rounded-full {
   border-radius: 9999px;
-}
-
-.rounded-l-full {
-  border-top-left-radius: 9999px;
-  border-bottom-left-radius: 9999px;
-}
-
-.rounded-r-full {
-  border-top-right-radius: 9999px;
-  border-bottom-right-radius: 9999px;
-}
-
-.rounded-t-full {
-  border-top-left-radius: 9999px;
-  border-top-right-radius: 9999px;
 }
 
 .rounded-b-full {
@@ -1124,6 +1008,10 @@ video {
   background-color: rgba(30, 30, 40, var(--tw-bg-opacity));
 }
 
+.bg-\[\#1e1e28e0\] {
+  background-color: #1e1e28e0;
+}
+
 .bg-\[\#20202a\] {
   --tw-bg-opacity: 1;
   background-color: rgba(32, 32, 42, var(--tw-bg-opacity));
@@ -1149,39 +1037,8 @@ video {
   background-color: rgba(25, 25, 35, var(--tw-bg-opacity));
 }
 
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
-}
-
-.bg-\[\#1e1e28e0\] {
-  background-color: #1e1e28e0;
-}
-
-.bg-\[\#404047\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(64, 64, 71, var(--tw-bg-opacity));
-}
-
-.bg-\[\#343440\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(52, 52, 64, var(--tw-bg-opacity));
-}
-
 .bg-opacity-95 {
   --tw-bg-opacity: 0.95;
-}
-
-.bg-opacity-40 {
-  --tw-bg-opacity: 0.4;
-}
-
-.bg-opacity-60 {
-  --tw-bg-opacity: 0.6;
-}
-
-.bg-opacity-0 {
-  --tw-bg-opacity: 0;
 }
 
 .object-cover {
@@ -1194,10 +1051,6 @@ video {
      object-position: center;
 }
 
-.p-3 {
-  padding: 0.75rem;
-}
-
 .p-7 {
   padding: 1.75rem;
 }
@@ -1206,9 +1059,23 @@ video {
   padding: 1rem;
 }
 
+.\!p-0 {
+  padding: 0px !important;
+}
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .px-8 {
@@ -1221,11 +1088,6 @@ video {
   padding-bottom: 3.5rem;
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -1234,46 +1096,6 @@ video {
 .px-7 {
   padding-left: 1.75rem;
   padding-right: 1.75rem;
-}
-
-.py-3\.5 {
-  padding-top: 0.875rem;
-  padding-bottom: 0.875rem;
-}
-
-.px-2\.5 {
-  padding-left: 0.625rem;
-  padding-right: 0.625rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.px-3\.5 {
-  padding-left: 0.875rem;
-  padding-right: 0.875rem;
-}
-
-.py-2\.5 {
-  padding-top: 0.625rem;
-  padding-bottom: 0.625rem;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
 }
 
 .pt-0 {
@@ -1296,11 +1118,6 @@ video {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -1308,6 +1125,11 @@ video {
 
 .text-\[10px\] {
   font-size: 10px;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-xl {
@@ -1340,14 +1162,14 @@ video {
   letter-spacing: 0.1em;
 }
 
-.text-\[\#8c8c8c\] {
-  --tw-text-opacity: 1;
-  color: rgba(140, 140, 140, var(--tw-text-opacity));
-}
-
 .text-white {
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+
+.text-\[\#8c8c8c\] {
+  --tw-text-opacity: 1;
+  color: rgba(140, 140, 140, var(--tw-text-opacity));
 }
 
 .text-\[\#cacaca\] {
@@ -1375,16 +1197,16 @@ video {
   color: rgba(140, 140, 142, var(--tw-text-opacity));
 }
 
+.opacity-0 {
+  opacity: 0;
+}
+
 .opacity-\[98\%\] {
   opacity: 98%;
 }
 
 .opacity-75 {
   opacity: 0.75;
-}
-
-.opacity-0 {
-  opacity: 0;
 }
 
 .shadow {
@@ -1477,10 +1299,6 @@ video {
     left: 0px;
   }
 
-  .lg\:\!left-0 {
-    left: 0px !important;
-  }
-
   .lg\:ml-72 {
     margin-left: 18rem;
   }
@@ -1491,10 +1309,6 @@ video {
 
   .lg\:mt-0 {
     margin-top: 0px;
-  }
-
-  .lg\:block {
-    display: block;
   }
 
   .lg\:hidden {
